:globe_with_meridians: Update lang files to 1.19.3-rc1

--- a/assets/minecraft/lang/enp.json
+++ b/assets/minecraft/lang/enp.json
@@ -86,5 +86,5 @@
     "merchant.level.3": "\u00a77Fareman",
     "merchant.level.4": "\u00a77Cunningman",
     "merchant.level.5": "\u00a77Cunninglord",
-    "merchant.trades": "\u00a77Trades"
+    "merchant.trades": "\u00a77Wrixles"
 }
