--- a/assets/minecraft/lang/es_ar.json
+++ b/assets/minecraft/lang/es_ar.json
@@ -79,7 +79,7 @@
     "itemGroup.op": "\u00a77Herramientas de administrador",
     "itemGroup.redstone": "\u00a77Bloques de redstone",
     "itemGroup.search": "\u00a77Buscar \u00edtems",
-    "itemGroup.spawnEggs": "\u00a77Generadores",
+    "itemGroup.spawnEggs": "\u00a77Huevos generadores",
     "itemGroup.tools": "\u00a77Herramientas y \u00fatiles",
     "merchant.level.1": "\u00a77Novato",
     "merchant.level.2": "\u00a77Aprendiz",
