--- a/assets/minecraft/lang/fr_ca.json
+++ b/assets/minecraft/lang/fr_ca.json
@@ -77,7 +77,7 @@
     "itemGroup.inventory": "\u00a77Inventaire du mode Survie",
     "itemGroup.natural": "\u00a77Blocs naturels",
     "itemGroup.op": "\u00a77Utilitaires d'op\u00e9rateur",
-    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.redstone": "\u00a77Composantes de redstone",
     "itemGroup.search": "\u00a77Rechercher",
     "itemGroup.spawnEggs": "\u00a77\u0152ufs spawneur",
     "itemGroup.tools": "\u00a77Outils et utilitaires",
