--- a/assets/minecraft/lang/isv.json
+++ b/assets/minecraft/lang/isv.json
@@ -66,11 +66,14 @@
     "entity.minecraft.zombie_horse": "\u00a77Konj zombi",
     "gui.advancements": "\u00a7fPostupy",
     "itemGroup.buildingBlocks": "\u00a77Bloky dlja budovanja",
+    "itemGroup.coloredBlocks": "\u00a77Bloky kolorovane",
     "itemGroup.combat": "\u00a77Oru\u017eja i bronje",
     "itemGroup.consumables": "\u00a77Spotr\u011bbovane",
     "itemGroup.crafting": "\u00a77Tvorjenje",
+    "itemGroup.foodAndDrink": "\u00a77Jedivo i napoje",
     "itemGroup.functional": "\u00a77Bloky funkcionalne",
     "itemGroup.hotbar": "\u00a77Shranjene instrumenty",
+    "itemGroup.ingredients": "\u00a77Ingredienty",
     "itemGroup.inventory": "\u00a77Imutok pr\u011b\u017eitja",
     "itemGroup.natural": "\u00a77Naturalne bloky",
     "itemGroup.redstone": "\u00a77Bloky do redstouna",
