--- a/assets/minecraft/lang/kk_kz.json
+++ b/assets/minecraft/lang/kk_kz.json
@@ -64,19 +64,19 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77\u049a\u0430\u0440\u0443\u0448\u044b",
     "entity.minecraft.wandering_trader": "\u00a77\u041a\u0435\u0437\u0431\u0435 \u0441\u0430\u0443\u0434\u0430\u0433\u0435\u0440",
     "entity.minecraft.zombie_horse": "\u00a77\u0417\u043e\u043c\u0431\u0438 \u0430\u0442",
-    "gui.advancements": "\u00a7f\u0416\u0435\u0442\u0456\u0441\u0442\u0456\u043a",
-    "itemGroup.buildingBlocks": "\u00a77\u049a\u04b1\u0440\u044b\u043b\u044b\u0441",
-    "itemGroup.coloredBlocks": "\u00a77\u0422\u04af\u0440\u043b\u0456 \u0442\u04af\u0441\u0442\u0456 \u0431\u043b\u043e\u043a\u0442\u0430\u0440",
+    "gui.advancements": "\u00a7f\u0416\u0435\u0442\u0456\u0441\u0442\u0456\u043a\u0442\u0435\u0440",
+    "itemGroup.buildingBlocks": "\u00a77\u049a\u04b1\u0440\u044b\u043b\u044b\u0441 \u0431\u043b\u043e\u043a\u0442\u0430\u0440\u044b",
+    "itemGroup.coloredBlocks": "\u00a77\u0422\u04af\u0441\u0442\u0456 \u0431\u043b\u043e\u043a\u0442\u0430\u0440",
     "itemGroup.combat": "\u00a77\u0428\u0430\u0439\u049b\u0430\u0441",
     "itemGroup.consumables": "\u00a77\u0422\u04b1\u0442\u044b\u043d\u0430\u0442\u044b\u043d \u0437\u0430\u0442\u0442\u0430\u0440",
     "itemGroup.crafting": "\u00a77\u0416\u0430\u0441\u0430\u0443",
-    "itemGroup.foodAndDrink": "\u00a77\u0410\u0437\u044b\u049b-\u0442\u04af\u043b\u0456\u043a",
+    "itemGroup.foodAndDrink": "\u00a77\u0422\u0430\u0493\u0430\u043c\u0434\u0430\u0440 \u043c\u0435\u043d \u0441\u0443\u0441\u044b\u043d\u0434\u0430\u0440",
     "itemGroup.functional": "\u00a77\u0424\u0443\u043d\u043a\u0446\u0438\u043e\u043d\u0430\u043b\u0434\u044b \u0431\u043b\u043e\u043a\u0442\u0430\u0440",
-    "itemGroup.hotbar": "\u00a77\u0421\u0430\u049b\u0442\u0430\u043b\u0493\u0430\u043d \u0445\u043e\u0442\u0431\u0430\u0440",
+    "itemGroup.hotbar": "\u00a77\u0421\u0430\u049b\u0442\u0430\u043b\u0493\u0430\u043d \u0445\u043e\u0442\u0431\u0430\u0440\u043b\u0430\u0440",
     "itemGroup.ingredients": "\u00a77\u0418\u043d\u0433\u0440\u0435\u0434\u0438\u0435\u043d\u0442\u0442\u0435\u0440",
     "itemGroup.inventory": "\u00a77\u0422\u0456\u0440\u0456 \u049b\u0430\u043b\u0443 \u043c\u04b1\u049b\u0430\u043c\u043c\u0430\u043b\u044b",
     "itemGroup.natural": "\u00a77\u0422\u0430\u0431\u0438\u0493\u0438 \u0431\u043b\u043e\u043a\u0442\u0430\u0440",
-    "itemGroup.op": "\u00a77\u041e\u043f\u0435\u0440\u0430\u0442\u043e\u0440 \u0443\u0442\u0438\u043b\u0438\u0442\u0430\u0440\u043b\u0430\u0440\u044b",
+    "itemGroup.op": "\u00a77\u041e\u043f\u0435\u0440\u0430\u0442\u043e\u0440 \u049b\u04b1\u0440\u0430\u043b\u0434\u0430\u0440\u044b",
     "itemGroup.redstone": "\u00a77\u0420\u0435\u0434\u0441\u0442\u043e\u0443\u043d \u0431\u043b\u043e\u043a\u0442\u0430\u0440\u044b",
     "itemGroup.search": "\u00a77\u0417\u0430\u0442 \u0456\u0437\u0434\u0435\u0443",
     "itemGroup.spawnEggs": "\u00a77\u0416\u0430\u0440\u0430\u0442\u0443 \u0436\u04b1\u043c\u044b\u0440\u0442\u049b\u0430\u043b\u0430\u0440\u044b",
