--- a/assets/minecraft/lang/lol_us.json
+++ b/assets/minecraft/lang/lol_us.json
@@ -73,7 +73,7 @@
     "itemGroup.foodAndDrink": "\u00a77Kat Foodz",
     "itemGroup.functional": "\u00a77bloccz u cna interacc lo",
     "itemGroup.hotbar": "\u00a77Savd warmbras",
-    "itemGroup.ingredients": "\u00a77stuffs 2 maek cuul thimgs heer i gess",
+    "itemGroup.ingredients": "\u00a77Kat Itumz",
     "itemGroup.inventory": "\u00a77Sirvivl Stuff",
     "itemGroup.natural": "\u00a77earth land bluks",
     "itemGroup.op": "\u00a77Hax 4 Me",
