--- a/assets/minecraft/lang/zh_tw.json
+++ b/assets/minecraft/lang/zh_tw.json
@@ -73,7 +73,7 @@
     "itemGroup.foodAndDrink": "\u00a77\u98df\u7269\u53ca\u98f2\u54c1",
     "itemGroup.functional": "\u00a77\u529f\u80fd\u65b9\u584a",
     "itemGroup.hotbar": "\u00a77\u5df2\u5132\u5b58\u7684\u5feb\u6377\u6b04",
-    "itemGroup.ingredients": "\u00a77\u539f\u6750\u6599",
+    "itemGroup.ingredients": "\u00a77\u539f\u6599",
     "itemGroup.inventory": "\u00a77\u751f\u5b58\u6a21\u5f0f\u7269\u54c1\u6b04",
     "itemGroup.natural": "\u00a77\u81ea\u7136\u65b9\u584a",
     "itemGroup.op": "\u00a77\u7ba1\u7406\u54e1\u5be6\u7528\u5de5\u5177",
