--- a/assets/minecraft/lang/es_ve.json
+++ b/assets/minecraft/lang/es_ve.json
@@ -19,16 +19,16 @@
     "container.barrel": "\u00a77Barril",
     "container.beacon": "\u00a77Faro",
     "container.blast_furnace": "\u00a77Alto horno",
-    "container.brewing": "\u00a77Soporte para pociones",
+    "container.brewing": "\u00a77Soporte de pociones",
     "container.cartography_table": "\u00a77Mesa de cartograf\u00eda",
-    "container.chest": "\u00a77Cofre",
+    "container.chest": "\u00a77Ba\u00fal",
     "container.chestDouble": "\u00a77Ba\u00fal grande",
     "container.crafting": "\u00a77Fabricaci\u00f3n",
     "container.creative": "\u00a77Selecci\u00f3n de objetos",
     "container.dispenser": "\u00a77Dispensador",
     "container.dropper": "\u00a77Soltador",
     "container.enchant": "\u00a77Encantar",
-    "container.enderchest": "\u00a77Cofre de ender",
+    "container.enderchest": "\u00a77Ba\u00fal de Ender",
     "container.furnace": "\u00a77Horno",
     "container.grindstone_title": "\u00a77Reparar y desencantar",
     "container.hopper": "\u00a77Tolva",
@@ -36,12 +36,12 @@
     "container.lectern": "\u00a77Atril",
     "container.loom": "\u00a77Telar",
     "container.repair": "\u00a77Reparar y renombrar",
-    "container.shulkerBox": "\u00a77Caja de shulker",
+    "container.shulkerBox": "\u00a77Caja de Shulker",
     "container.smoker": "\u00a77Ahumador",
     "container.stonecutter": "\u00a77Cortapiedras",
     "container.upgrade": "\u00a77Mejorar equipamiento",
     "entity.minecraft.chest_boat": "\u00a77Bote con cofre",
-    "entity.minecraft.chest_minecart": "\u00a77Vagoneta con cofre",
+    "entity.minecraft.chest_minecart": "\u00a77Vag\u00f3n con ba\u00fal",
     "entity.minecraft.horse": "\u00a77Caballo",
     "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Mula",
@@ -64,23 +64,23 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77Herrero de armas",
     "entity.minecraft.wandering_trader": "\u00a77Comerciante n\u00f3mada",
     "entity.minecraft.zombie_horse": "\u00a77Caballo zombi",
-    "gui.advancements": "\u00a7fProgresos",
+    "gui.advancements": "\u00a7fLogros",
     "itemGroup.buildingBlocks": "\u00a77Construcci\u00f3n",
     "itemGroup.coloredBlocks": "\u00a77Bloques de colores",
     "itemGroup.combat": "\u00a77Combate",
     "itemGroup.consumables": "\u00a77Consumibles",
-    "itemGroup.crafting": "\u00a77Materiales",
+    "itemGroup.crafting": "\u00a77Fabricaci\u00f3n",
     "itemGroup.foodAndDrink": "\u00a77Comida y bebida",
     "itemGroup.functional": "\u00a77Bloques funcionales",
     "itemGroup.hotbar": "\u00a77Barras de \u00edtems guardadas",
     "itemGroup.ingredients": "\u00a77Ingredientes",
     "itemGroup.inventory": "\u00a77Inventario",
     "itemGroup.natural": "\u00a77Bloques naturales",
-    "itemGroup.op": "\u00a77Herramientas de admin.",
-    "itemGroup.redstone": "\u00a77Redstone",
+    "itemGroup.op": "\u00a77Herramientas del operador",
+    "itemGroup.redstone": "\u00a77Bloques de redstone",
     "itemGroup.search": "\u00a77B\u00fasqueda",
-    "itemGroup.spawnEggs": "\u00a77Criaturas",
-    "itemGroup.tools": "\u00a77Herramientas y \u00fatiles",
+    "itemGroup.spawnEggs": "\u00a77Huevos generadores",
+    "itemGroup.tools": "\u00a77Herramientas",
     "merchant.level.1": "\u00a77Novato",
     "merchant.level.2": "\u00a77Aprendiz",
     "merchant.level.3": "\u00a77Cualificado",
