--- a/assets/minecraft/lang/li_li.json
+++ b/assets/minecraft/lang/li_li.json
@@ -66,13 +66,17 @@
     "entity.minecraft.zombie_horse": "\u00a77Zombiepaerd",
     "gui.advancements": "\u00a7fVeuroetgangen",
     "itemGroup.buildingBlocks": "\u00a77Bouwblokken",
+    "itemGroup.coloredBlocks": "\u00a77Gekleurde blokke",
     "itemGroup.combat": "\u00a77Gevecht",
     "itemGroup.consumables": "\u00a77Aetbaar",
     "itemGroup.crafting": "\u00a77Vervaardiging",
+    "itemGroup.foodAndDrink": "\u00a77Voedsel en drank",
     "itemGroup.functional": "\u00a77Functionele blokke",
     "itemGroup.hotbar": "\u00a77Opgeslaage werkbalke",
+    "itemGroup.ingredients": "\u00a77Ingredi\u00ebnte",
     "itemGroup.inventory": "\u00a77Inventaris",
     "itemGroup.natural": "\u00a77Natuurlijke blokke",
+    "itemGroup.op": "\u00a77Behierdersveurwerpe",
     "itemGroup.redstone": "\u00a77Redstoneblokke",
     "itemGroup.search": "\u00a77Zeuken",
     "itemGroup.spawnEggs": "\u00a77Spawneiere",
