--- a/assets/minecraft/lang/ru_ru.json
+++ b/assets/minecraft/lang/ru_ru.json
@@ -19,7 +19,7 @@
     "container.barrel": "\u00a77\u0411\u043e\u0447\u043a\u0430",
     "container.beacon": "\u00a77\u041c\u0430\u044f\u043a",
     "container.blast_furnace": "\u00a77\u041f\u043b\u0430\u0432\u0438\u043b\u044c\u043d\u0430\u044f \u043f\u0435\u0447\u044c",
-    "container.brewing": "\u00a77\u0421\u0442\u0430\u043d\u0446\u0438\u044f \u0437\u0435\u043b\u044c\u0435\u0432\u0430\u0440\u0435\u043d\u0438\u044f",
+    "container.brewing": "\u00a77\u0417\u0435\u043b\u044c\u0435\u0432\u0430\u0440\u043a\u0430",
     "container.cartography_table": "\u00a77\u0421\u0442\u043e\u043b \u043a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444\u0430",
     "container.chest": "\u00a77\u0421\u0443\u043d\u0434\u0443\u043a",
     "container.chestDouble": "\u00a77\u0411\u043e\u043b\u044c\u0448\u043e\u0439 \u0441\u0443\u043d\u0434\u0443\u043a",
@@ -37,16 +37,16 @@
     "container.loom": "\u00a77\u0422\u043a\u0430\u0446\u043a\u0438\u0439 \u0441\u0442\u0430\u043d\u043e\u043a",
     "container.repair": "\u00a77\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435 \u0438\u043b\u0438 \u0440\u0435\u043c\u043e\u043d\u0442",
     "container.shulkerBox": "\u00a77\u0428\u0430\u043b\u043a\u0435\u0440\u043e\u0432\u044b\u0439 \u044f\u0449\u0438\u043a",
-    "container.smoker": "\u00a77\u041a\u043e\u043f\u0442\u0438\u043b\u044c\u043d\u0430\u044f \u043f\u0435\u0447\u044c",
+    "container.smoker": "\u00a77\u041a\u043e\u043f\u0442\u0438\u043b\u044c\u043d\u044f",
     "container.stonecutter": "\u00a77\u041a\u0430\u043c\u043d\u0435\u0440\u0435\u0437",
     "container.upgrade": "\u00a77\u0423\u043b\u0443\u0447\u0448\u0438\u0442\u044c \u0441\u043d\u0430\u0440\u044f\u0436\u0435\u043d\u0438\u0435",
     "entity.minecraft.chest_boat": "\u00a77\u0413\u0440\u0443\u0437\u043e\u0432\u0430\u044f \u043b\u043e\u0434\u043a\u0430",
-    "entity.minecraft.chest_minecart": "\u00a77\u0412\u0430\u0433\u043e\u043d\u0435\u0442\u043a\u0430-\u0441\u0443\u043d\u0434\u0443\u043a",
+    "entity.minecraft.chest_minecart": "\u00a77\u0413\u0440\u0443\u0437\u043e\u0432\u0430\u044f \u0432\u0430\u0433\u043e\u043d\u0435\u0442\u043a\u0430",
     "entity.minecraft.horse": "\u00a77\u041b\u043e\u0448\u0430\u0434\u044c",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
     "entity.minecraft.mule": "\u00a77\u041c\u0443\u043b",
     "entity.minecraft.skeleton_horse": "\u00a77\u041b\u043e\u0448\u0430\u0434\u044c-\u0441\u043a\u0435\u043b\u0435\u0442",
-    "entity.minecraft.villager": "\u00a77\u0416\u0438\u0442\u0435\u043b\u044c",
+    "entity.minecraft.villager": "\u00a77\u041a\u0440\u0435\u0441\u0442\u044c\u044f\u043d\u0438\u043d",
     "entity.minecraft.villager.armorer": "\u00a77\u0411\u0440\u043e\u043d\u043d\u0438\u043a",
     "entity.minecraft.villager.butcher": "\u00a77\u041c\u044f\u0441\u043d\u0438\u043a",
     "entity.minecraft.villager.cartographer": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444",
@@ -68,7 +68,7 @@
     "itemGroup.buildingBlocks": "\u00a77\u0421\u0442\u0440\u043e\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0435 \u0431\u043b\u043e\u043a\u0438",
     "itemGroup.coloredBlocks": "\u00a77\u0420\u0430\u0437\u043d\u043e\u0446\u0432\u0435\u0442\u043d\u044b\u0435 \u0431\u043b\u043e\u043a\u0438",
     "itemGroup.combat": "\u00a77\u041e\u0440\u0443\u0436\u0438\u0435 \u0438 \u0434\u043e\u0441\u043f\u0435\u0445\u0438",
-    "itemGroup.consumables": "\u00a77\u041f\u0438\u0449\u0430 \u0438 \u0437\u0435\u043b\u044c\u0435\u0432\u0430\u0440\u0435\u043d\u044c\u0435",
+    "itemGroup.consumables": "\u00a77\u0415\u0434\u0430 \u0438 \u043d\u0430\u043f\u0438\u0442\u043a\u0438",
     "itemGroup.crafting": "\u00a77\u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435",
     "itemGroup.foodAndDrink": "\u00a77\u0415\u0434\u0430 \u0438 \u043d\u0430\u043f\u0438\u0442\u043a\u0438",
     "itemGroup.functional": "\u00a77\u0424\u0443\u043d\u043a\u0446\u0438\u043e\u043d\u0430\u043b\u044c\u043d\u044b\u0435 \u0431\u043b\u043e\u043a\u0438",
@@ -77,10 +77,10 @@
     "itemGroup.inventory": "\u00a77\u0418\u043d\u0432\u0435\u043d\u0442\u0430\u0440\u044c \u0432\u044b\u0436\u0438\u0432\u0430\u043d\u0438\u044f",
     "itemGroup.natural": "\u00a77\u041f\u0440\u0438\u0440\u043e\u0434\u043d\u044b\u0435 \u0431\u043b\u043e\u043a\u0438",
     "itemGroup.op": "\u00a77\u0418\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u044b \u043e\u043f\u0435\u0440\u0430\u0442\u043e\u0440\u0430",
-    "itemGroup.redstone": "\u00a77\u041c\u0435\u0445\u0430\u043d\u0438\u0437\u043c\u044b",
+    "itemGroup.redstone": "\u00a77\u0420\u0435\u0434\u0441\u0442\u043e\u0443\u043d-\u043c\u0435\u0445\u0430\u043d\u0438\u043a\u0430",
     "itemGroup.search": "\u00a77\u041f\u043e\u0438\u0441\u043a",
     "itemGroup.spawnEggs": "\u00a77\u042f\u0439\u0446\u0430 \u043f\u0440\u0438\u0437\u044b\u0432\u0430",
-    "itemGroup.tools": "\u00a77\u041f\u0440\u0438\u0441\u043f\u043e\u0441\u043e\u0431\u043b\u0435\u043d\u0438\u044f",
+    "itemGroup.tools": "\u00a77\u0418\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u044b \u0438 \u043f\u0440\u0438\u0441\u043f\u043e\u0441\u043e\u0431\u043b\u0435\u043d\u0438\u044f",
     "merchant.level.1": "\u00a77\u041d\u043e\u0432\u0438\u0447\u043e\u043a",
     "merchant.level.2": "\u00a77\u041f\u043e\u0434\u043c\u0430\u0441\u0442\u0435\u0440\u044c\u0435",
     "merchant.level.3": "\u00a77\u0420\u0435\u043c\u0435\u0441\u043b\u0435\u043d\u043d\u0438\u043a",
