--- a/assets/minecraft/lang/sq_al.json
+++ b/assets/minecraft/lang/sq_al.json
@@ -16,9 +16,11 @@
     "block.minecraft.shulker_box": "\u00a77Kutia kudh\u00ebr",
     "block.minecraft.white_shulker_box": "\u00a77Kutia bardh\u00eb skuller",
     "block.minecraft.yellow_shulker_box": "\u00a77Kutia verdhe skuller",
+    "container.barrel": "\u00a77Fu\u00e7i",
     "container.beacon": "\u00a77M",
     "container.blast_furnace": "\u00a77C",
-    "container.brewing": "\u00a77V",
+    "container.brewing": "\u00a77Q\u00ebndrimi i birr\u00ebs\n",
+    "container.cartography_table": "\u00a77Tabela e hartografis\u00eb\n",
     "container.chest": "\u00a77B",
     "container.chestDouble": "\u00a77Thesar i madh",
     "container.crafting": "\u00a77Zejtari",
@@ -32,15 +34,19 @@
     "container.hopper": "\u00a77Mbledh\u00ebs Sendesh",
     "container.inventory": "\u00a77Inventari",
     "container.lectern": "\u00a77X",
+    "container.loom": "\u00a77Tezgjah",
     "container.repair": "\u00a77Redukto dhe Em\u00ebro",
     "container.shulkerBox": "\u00a77,",
     "container.smoker": "\u00a77Z",
+    "container.stonecutter": "\u00a77Gur\u00ebpjes\u00eb",
     "container.upgrade": "\u00a77P\u00ebrmir\u00ebsimi i pajisjeve",
     "entity.minecraft.chest_boat": "\u00a77Vark\u00eb me Thesar",
+    "entity.minecraft.chest_minecart": "\u00a77Karroc\u00eb e vog\u00ebl me gjoks\n",
     "entity.minecraft.horse": "\u00a77Kal\u00eb",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mushk\u00eb",
     "entity.minecraft.skeleton_horse": "\u00a77Kal Skeleti",
+    "entity.minecraft.villager": "\u00a77Fshatar",
     "entity.minecraft.villager.armorer": "\u00a77Parzmorepunues",
     "entity.minecraft.villager.butcher": "\u00a77Kasap",
     "entity.minecraft.villager.cartographer": "\u00a77Hartograf",
@@ -60,9 +66,11 @@
     "entity.minecraft.zombie_horse": "\u00a77Kali Zombi",
     "gui.advancements": "\u00a7fAvancimet",
     "itemGroup.buildingBlocks": "\u00a77Nd\u00ebrto Blloqe",
+    "itemGroup.coloredBlocks": "\u00a77Blloqe te Ngjyrosur",
     "itemGroup.combat": "\u00a77Betej\u00eb",
     "itemGroup.consumables": "\u00a77T\u00eb Kosumueshmet",
     "itemGroup.crafting": "\u00a77Duke Nd\u00ebrtuar",
+    "itemGroup.foodAndDrink": "\u00a77Ushqimet & Pijet",
     "itemGroup.functional": "\u00a77Blloqe Funksjonimi",
     "itemGroup.hotbar": "\u00a77Shirit veprimi t\u00eb ruajtura",
     "itemGroup.inventory": "\u00a77Inventar Mbijetimi",
