:globe_with_meridians: Update lang files to 1.19.3-rc2

--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -69,7 +69,7 @@
     "itemGroup.coloredBlocks": "\u00a77Colored Blocks",
     "itemGroup.combat": "\u00a77Weapons",
     "itemGroup.consumables": "\u00a77Food",
-    "itemGroup.crafting": "\u00a77Crafin'",
+    "itemGroup.crafting": "\u00a77Craftin'",
     "itemGroup.foodAndDrink": "\u00a77Grub",
     "itemGroup.functional": "\u00a77Working Blocks",
     "itemGroup.hotbar": "\u00a77Saved pockets for ya tools",
