--- a/assets/minecraft/lang/eu_es.json
+++ b/assets/minecraft/lang/eu_es.json
@@ -66,6 +66,7 @@
     "entity.minecraft.zombie_horse": "\u00a77Zonbi-zaldia",
     "gui.advancements": "\u00a7fAurrerapenak",
     "itemGroup.buildingBlocks": "\u00a77Eraikuntza blokeak",
+    "itemGroup.coloredBlocks": "\u00a77Bloke Koloreztatuak",
     "itemGroup.combat": "\u00a77Borroka",
     "itemGroup.consumables": "\u00a77Konsumitzaileak",
     "itemGroup.crafting": "\u00a77Artisautza",
