--- a/assets/minecraft/lang/ga_ie.json
+++ b/assets/minecraft/lang/ga_ie.json
@@ -16,19 +16,31 @@
     "block.minecraft.shulker_box": "\u00a77Bosca Mollcaire",
     "block.minecraft.white_shulker_box": "\u00a77Bosca Mollcaire B\u00e1n",
     "block.minecraft.yellow_shulker_box": "\u00a77Bosca Mollcaire Bu\u00ed",
+    "container.blast_furnace": "\u00a77Foirn\u00e9is Soinne\u00e1in",
+    "container.brewing": "\u00a77Seast\u00e1n Gr\u00fadaireacht",
+    "container.chest": "\u00a77C\u00f3fra",
     "container.chestDouble": "\u00a77C\u00f3fra M\u00f3r",
     "container.crafting": "\u00a77Cearda\u00edocht",
     "container.creative": "\u00a77Roghn\u00fa Earra",
+    "container.dispenser": "\u00a77D\u00e1ileoir",
+    "container.dropper": "\u00a77D\u00e1illeoir",
     "container.enchant": "\u00a77Asarla\u00edocht",
+    "container.enderchest": "\u00a77Ciste na Cr\u00edche",
+    "container.furnace": "\u00a77Foirn\u00e9is",
     "container.grindstone_title": "\u00a77Deisigh \u204a Bain Dra\u00edocht",
     "container.hopper": "\u00a77Crann\u00f3g Earra\u00ed",
+    "container.inventory": "\u00a77Fardal",
+    "container.lectern": "\u00a77L\u00e9acht\u00e1n",
     "container.repair": "\u00a77Deisigh & Ainmnigh",
+    "container.smoker": "\u00a77Leas\u00f3ir",
     "container.upgrade": "\u00a77Fearas Uasghr\u00e1daithe",
     "entity.minecraft.chest_boat": "\u00a77B\u00e1d le C\u00f3fra",
+    "entity.minecraft.chest_minecart": "\u00a77Cairt Mianaigh le C\u00f3fra",
     "entity.minecraft.horse": "\u00a77Capall",
     "entity.minecraft.llama": "\u00a77L\u00e1ma",
     "entity.minecraft.mule": "\u00a77Mi\u00fail",
     "entity.minecraft.skeleton_horse": "\u00a77Capall Cn\u00e1mharlaigh",
+    "entity.minecraft.villager": "\u00a77Sr\u00e1ide\u00e1nach",
     "entity.minecraft.villager.armorer": "\u00a77Armad\u00f3ir",
     "entity.minecraft.villager.butcher": "\u00a77B\u00faist\u00e9ir",
     "entity.minecraft.villager.cartographer": "\u00a77Cartagrafa\u00ed",
@@ -46,11 +58,23 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77Gabha Arm",
     "entity.minecraft.wandering_trader": "\u00a77Tr\u00e1d\u00e1la\u00ed F\u00e1nach",
     "entity.minecraft.zombie_horse": "\u00a77Capall Zomba\u00ed",
+    "gui.advancements": "\u00a7fForbairt\u00ed",
     "itemGroup.buildingBlocks": "\u00a77Bloic Th\u00f3g\u00e1la",
+    "itemGroup.coloredBlocks": "\u00a77Bloic Daite",
     "itemGroup.combat": "\u00a77Comhrac",
+    "itemGroup.consumables": "\u00a77Inchaite",
+    "itemGroup.crafting": "\u00a77Cearda\u00edocht",
+    "itemGroup.foodAndDrink": "\u00a77Bia & Deochanna",
+    "itemGroup.functional": "\u00a77Bloic Feidhme",
     "itemGroup.hotbar": "\u00a77Mearbharra\u00ed S\u00e1bh\u00e1ilte",
+    "itemGroup.ingredients": "\u00a77Comh\u00e1bhair",
     "itemGroup.inventory": "\u00a77Fardal Marthanais",
+    "itemGroup.natural": "\u00a77Bloic N\u00e1d\u00fartha",
+    "itemGroup.op": "\u00a77F\u00f3ntais Oibreora",
+    "itemGroup.redstone": "\u00a77Bloic Deargchloch",
     "itemGroup.search": "\u00a77Cuardaigh Earra\u00ed",
+    "itemGroup.spawnEggs": "\u00a77Uibheacha sceith",
+    "itemGroup.tools": "\u00a77Uirlis\u00ed & F\u00f3ntais",
     "merchant.level.1": "\u00a77N\u00fa\u00edosach",
     "merchant.level.2": "\u00a77Print\u00edseach",
     "merchant.level.3": "\u00a77Giurn\u00e1la\u00ed",
