--- a/assets/minecraft/lang/lmo.json
+++ b/assets/minecraft/lang/lmo.json
@@ -37,7 +37,7 @@
     "container.loom": "\u00a77Telar",
     "container.repair": "\u00a77Giusta e d\u00e0 un nom",
     "container.shulkerBox": "\u00a77Scatola de shulker",
-    "container.smoker": "\u00a77Afumegador",
+    "container.smoker": "\u00a77Fumegador",
     "container.stonecutter": "\u00a77Taja-preje",
     "container.upgrade": "\u00a77Mejora un lavor\u00e0",
     "entity.minecraft.chest_boat": "\u00a77Barca con cesta",
