--- a/assets/minecraft/lang/sq_al.json
+++ b/assets/minecraft/lang/sq_al.json
@@ -73,8 +73,10 @@
     "itemGroup.foodAndDrink": "\u00a77Ushqimet & Pijet",
     "itemGroup.functional": "\u00a77Blloqe Funksjonimi",
     "itemGroup.hotbar": "\u00a77Shirit veprimi t\u00eb ruajtura",
+    "itemGroup.ingredients": "\u00a77P\u00ebrb\u00ebr\u00ebsit",
     "itemGroup.inventory": "\u00a77Inventar Mbijetimi",
     "itemGroup.natural": "\u00a77Blloqe Natyrale",
+    "itemGroup.op": "\u00a77Sh\u00ebrbimet e Operatorit",
     "itemGroup.redstone": "\u00a77Blloqe Redstone-i",
     "itemGroup.search": "\u00a77Kerko artikuj",
     "itemGroup.spawnEggs": "\u00a77Vez\u00eb L\u00ebshimi",
