--- a/assets/minecraft/lang/zh_tw.json
+++ b/assets/minecraft/lang/zh_tw.json
@@ -76,7 +76,7 @@
     "itemGroup.ingredients": "\u00a77\u539f\u6599",
     "itemGroup.inventory": "\u00a77\u751f\u5b58\u6a21\u5f0f\u7269\u54c1\u6b04",
     "itemGroup.natural": "\u00a77\u81ea\u7136\u65b9\u584a",
-    "itemGroup.op": "\u00a77\u7ba1\u7406\u54e1\u5be6\u7528\u5de5\u5177",
+    "itemGroup.op": "\u00a77\u7ba1\u7406\u54e1\u5be6\u7528\u7269\u54c1",
     "itemGroup.redstone": "\u00a77\u7d05\u77f3\u65b9\u584a",
     "itemGroup.search": "\u00a77\u641c\u5c0b\u7269\u54c1",
     "itemGroup.spawnEggs": "\u00a77\u751f\u602a\u86cb",
