--- a/assets/minecraft/lang/sr_sp.json
+++ b/assets/minecraft/lang/sr_sp.json
@@ -16,19 +16,37 @@
     "block.minecraft.shulker_box": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.white_shulker_box": "\u00a77\u0411\u0435\u043b\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
     "block.minecraft.yellow_shulker_box": "\u00a77\u0416\u0443\u0442\u0430 \u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
+    "container.barrel": "\u00a77\u0411\u0443\u0440\u0435",
+    "container.beacon": "\u00a77\u0421\u0432\u0435\u0442\u0438\u043e\u043d\u0438\u043a",
+    "container.blast_furnace": "\u00a77\u0412\u0438\u0441\u043e\u043a\u0430 \u043f\u0435\u045b\u043d\u0438\u0446\u0430",
+    "container.brewing": "\u00a77\u0421\u0430\u043c\u043e\u0432\u0430\u0440 \u0437\u0430 \u043d\u0430\u043f\u0438\u0442\u043a\u0435",
+    "container.cartography_table": "\u00a77\u0421\u0442\u043e \u0437\u0430 \u043a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444\u0438\u0458\u0443",
+    "container.chest": "\u00a77\u041a\u043e\u0432\u0447\u0435\u0433",
     "container.chestDouble": "\u00a77\u0412\u0435\u043b\u0438\u043a\u0438 \u043a\u043e\u0432\u0447\u0435\u0433",
     "container.crafting": "\u00a77\u041f\u0440\u0430\u0432\u0459\u0435\u045a\u0435",
     "container.creative": "\u00a77\u0418\u0437\u0431\u043e\u0440 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u0430",
+    "container.dispenser": "\u00a77\u0418\u0441\u043f\u0430\u0459\u0438\u0432\u0430\u0447",
+    "container.dropper": "\u00a77\u0418\u0437\u0431\u0430\u0446\u0438\u0432\u0430\u0447",
     "container.enchant": "\u00a77\u0427\u0430\u0440\u0430\u045a\u0435",
+    "container.enderchest": "\u00a77\u0415\u043d\u0434\u0435\u0440 \u043a\u043e\u0432\u0447\u0435\u0433",
+    "container.furnace": "\u00a77\u041f\u0435\u045b\u043d\u0438\u0446\u0430",
     "container.grindstone_title": "\u00a77\u041f\u043e\u043f\u0440\u0430\u0432\u0430\u043a \u0438 \u0440\u0430\u0441\u043f\u0440\u0448\u0438\u0432\u0430\u045a\u0435",
     "container.hopper": "\u00a77\u0421\u043a\u0443\u043f\u0459\u0430\u0447 \u0441\u0442\u0432\u0430\u0440\u0438",
+    "container.inventory": "\u00a77\u0418\u043d\u0432\u0435\u043d\u0442\u0430\u0440",
+    "container.lectern": "\u00a77\u041f\u0443\u043b\u0442",
+    "container.loom": "\u00a77\u0420\u0430\u0437\u0431\u043e\u0458",
     "container.repair": "\u00a77\u041f\u043e\u043f\u0440\u0430\u0432\u0438 \u0438 \u0438\u043c\u0435\u043d\u0443\u0458",
+    "container.shulkerBox": "\u00a77\u0428\u0443\u043b\u043a\u0435\u0440 \u043a\u0443\u0442\u0438\u0458\u0430",
+    "container.smoker": "\u00a77\u041f\u0443\u0448\u043d\u0438\u0446\u0430",
+    "container.stonecutter": "\u00a77\u0420\u0435\u0437\u0430\u0447 \u043a\u0430\u043c\u0435\u043d\u0430",
     "container.upgrade": "\u00a77\u0423\u043d\u0430\u043f\u0440\u0435\u0434\u0438 \u043e\u043f\u0440\u0435\u043c\u0443",
     "entity.minecraft.chest_boat": "\u00a77\u0427\u0430\u043c\u0430\u0446 \u0441\u0430 \u043a\u043e\u0432\u0447\u0435\u0433\u043e\u043c",
+    "entity.minecraft.chest_minecart": "\u00a77\u0420\u0443\u0434\u0430\u0440\u0441\u043a\u0430 \u043a\u043e\u043b\u0438\u0446\u0430 \u0441\u0430 \u043a\u043e\u0432\u0447\u0435\u0433\u043e\u043c",
     "entity.minecraft.horse": "\u00a77\u041a\u043e\u045a",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
     "entity.minecraft.mule": "\u00a77\u041c\u0430\u0437\u0433\u0430",
     "entity.minecraft.skeleton_horse": "\u00a77\u041a\u043e\u0441\u0442\u0443\u0440 \u043a\u043e\u045a\u0430",
+    "entity.minecraft.villager": "\u00a77\u0421\u0435\u0459\u0430\u043a",
     "entity.minecraft.villager.armorer": "\u00a77\u041a\u043e\u0432\u0430\u0447 \u043e\u043a\u043b\u043e\u043f\u0430",
     "entity.minecraft.villager.butcher": "\u00a77\u041c\u0435\u0441\u0430\u0440",
     "entity.minecraft.villager.cartographer": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444",
@@ -46,11 +64,23 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77\u041a\u043e\u0432\u0430\u0447 \u043e\u0440\u0443\u0436\u0458\u0430",
     "entity.minecraft.wandering_trader": "\u00a77\u041b\u0443\u0442\u0430\u0458\u0443\u045b\u0438 \u0442\u0440\u0433\u043e\u0432\u0430\u0446",
     "entity.minecraft.zombie_horse": "\u00a77\u0417\u043e\u043c\u0431\u0438 \u043a\u043e\u045a",
+    "gui.advancements": "\u00a7f\u041d\u0430\u043f\u0440\u0435\u0434\u0446\u0438",
     "itemGroup.buildingBlocks": "\u00a77\u0413\u0440\u0430\u0434\u0438\u0432\u043d\u0438 \u0431\u043b\u043e\u043a\u043e\u0432\u0438",
+    "itemGroup.coloredBlocks": "\u00a77\u041e\u0431\u043e\u0458\u0435\u043d\u0438 \u0431\u043b\u043e\u043a\u043e\u0432\u0438",
     "itemGroup.combat": "\u00a77\u0411\u043e\u0440\u0431\u0430",
+    "itemGroup.consumables": "\u00a77\u041f\u043e\u0442\u0440\u043e\u0448\u043d\u0438 \u043c\u0430\u0442\u0435\u0440\u0438\u0458\u0430\u043b",
+    "itemGroup.crafting": "\u00a77\u041f\u0440\u0430\u0432\u0459\u0435\u045a\u0435",
+    "itemGroup.foodAndDrink": "\u00a77\u0425\u0440\u0430\u043d\u0430 \u0438 \u043f\u0438\u045b\u0435",
+    "itemGroup.functional": "\u00a77\u0424\u0443\u043d\u043a\u0446\u0438\u043e\u043d\u0430\u043b\u043d\u0438 \u0431\u043b\u043e\u043a\u043e\u0432\u0438",
     "itemGroup.hotbar": "\u00a77\u0421\u0430\u0447\u0443\u0432\u0430\u043de \u0442\u0440\u0430\u043a\u0435 \u0441\u0430 \u0430\u043b\u0430\u0442\u0438\u043c\u0430",
+    "itemGroup.ingredients": "\u00a77\u0421\u0430\u0441\u0442\u043e\u0458\u0446\u0438",
     "itemGroup.inventory": "\u00a77\u0418\u043d\u0432\u0435\u043d\u0442\u0430\u0440 \u0437\u0430 \u043f\u0440\u0435\u0436\u0438\u0432\u0459\u0430\u0432\u0430\u045a\u0435",
+    "itemGroup.natural": "\u00a77\u041f\u0440\u0438\u0440\u043e\u0434\u043d\u0438 \u0431\u043b\u043e\u043a\u043e\u0432\u0438",
+    "itemGroup.op": "\u00a77\u041e\u043f\u0435\u0440\u0430\u0442\u043e\u0440\u0441\u043a\u0438 \u0430\u043b\u0430\u0442\u0438",
+    "itemGroup.redstone": "\u00a77\u0420\u0435\u0434\u0441\u0442\u043e\u0443\u043d \u0431\u043b\u043e\u043a\u043e\u0432\u0438",
     "itemGroup.search": "\u00a77\u041f\u0440\u0435\u0442\u0440\u0430\u0433\u0430",
+    "itemGroup.spawnEggs": "\u00a77\u0408\u0430\u0458\u0430 \u0437\u0430 \u0441\u0442\u0432\u0430\u0440\u0430\u045a\u0435",
+    "itemGroup.tools": "\u00a77\u0410\u043b\u0430\u0442\u0438 \u0438 \u0443\u0441\u043b\u0443\u0436\u043d\u0438 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u0438",
     "merchant.level.1": "\u00a77\u041d\u043e\u0432\u0430\u0458\u043b\u0438\u0458\u0430",
     "merchant.level.2": "\u00a77\u0428\u0435\u0433\u0440\u0442",
     "merchant.level.3": "\u00a77\u041a\u0430\u043b\u0444\u0430",
