--- a/assets/minecraft/lang/tr_tr.json
+++ b/assets/minecraft/lang/tr_tr.json
@@ -77,7 +77,7 @@
     "itemGroup.inventory": "\u00a77Hayatta Kalma Envanteri",
     "itemGroup.natural": "\u00a77Do\u011fa Bloklar\u0131",
     "itemGroup.op": "\u00a77Operat\u00f6r Ara\u00e7lar\u0131",
-    "itemGroup.redstone": "\u00a77K\u0131z\u0131lta\u015f Bloklar\u0131",
+    "itemGroup.redstone": "\u00a77Redstone Bloklar\u0131",
     "itemGroup.search": "\u00a77Ara",
     "itemGroup.spawnEggs": "\u00a77\u00c7a\u011f\u0131rma Yumurtalar\u0131",
     "itemGroup.tools": "\u00a77Aletler ve Ara\u00e7lar",
