:globe_with_meridians: Update lang files to 1.19.3-rc3

--- a/assets/minecraft/lang/esan.json
+++ b/assets/minecraft/lang/esan.json
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77D\u00eeppen\u00e7ad\u00f4h",
     "container.dropper": "\u00a77\u00c7ortad\u00f4h",
     "container.enchant": "\u00a77Encant\u00e2h",
-    "container.enderchest": "\u00a77Cofre de ender",
+    "container.enderchest": "\u00a77Cofre der Ender",
     "container.furnace": "\u00a77H\u00f4nno",
     "container.grindstone_title": "\u00a77Repar\u00e2h y de\u00e7encant\u00e2h",
     "container.hopper": "\u00a77Torba",
