:globe_with_meridians: Update lang files to 1.19.3

--- a/assets/minecraft/lang/ms_my.json
+++ b/assets/minecraft/lang/ms_my.json
@@ -73,10 +73,10 @@
     "itemGroup.foodAndDrink": "\u00a77Makanan & Minuman",
     "itemGroup.functional": "\u00a77Blok Berfungsi",
     "itemGroup.hotbar": "\u00a77Palang Utama Disimpan",
-    "itemGroup.ingredients": "\u00a77Bahan-bahan",
+    "itemGroup.ingredients": "\u00a77Bahan",
     "itemGroup.inventory": "\u00a77Inventori Kemandirian",
     "itemGroup.natural": "\u00a77Blok Semula Jadi",
-    "itemGroup.op": "\u00a77Kemudahan Pengendali",
+    "itemGroup.op": "\u00a77Alat Pengendali",
     "itemGroup.redstone": "\u00a77Blok-blok Redstone",
     "itemGroup.search": "\u00a77Cari Item",
     "itemGroup.spawnEggs": "\u00a77Telur Penjelmaan",
